--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Create Planet,Discover Universe" />
     <title>Planet Generator 2</title>
     <style>
       body {
         --margin: 8px;
         margin: var(--margin);
+        background-color: #fff;
       }
       h1 {
         font-weight: 500;
@@ -23,12 +25,9 @@
         background-color: #000000;
         border: 1px solid #ddd;
         position: relative;
-        ;
       }
     </style>
     <link rel="stylesheet" href="planet.css" />
-    <!-- Code injected by Five-server -->
-    <script async data-id="five-server" data-file="d:\Users\nsakrty\Desktop\PlanetGenerator2\index.html" type="application/javascript" src="/fiveserver.js"></script>
   </head>
   <body>
     <header>
@@ -40,6 +39,7 @@
       <div id="result">
         <div id="shadow"></div>
         <img id="cloud" src="image/cloud1.png" alt="" />
+        <img id="detail" src="image/detail0.png" alt="" />
         <div id="planet"></div>
       </div>
       <hr />
