--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
       <div id="result">
         <div id="planet">
           <div id="shadow"></div>
-          <img id="ring" src="image/ring1.png" />
+          <img class="ring" id="ringFront" src="image/ring0.png" />
+          <img class="ring" id="ringBehind" src="image/ring0.png" />
           <img id="cloud" src="image/cloud1.png" alt="" />
           <img id="detail" src="image/detail0.png" alt="" />
           <div id="base"></div>
@@ -55,8 +56,6 @@
         <button onclick="randomGenerate()">随机生成</button>
       </div>
       <script src="generator.js"></script>
-      <script>
-      </script>
     </div>
   </body>
 </html>
