More Image and Show Data

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
       <hr />
       <div id="control" style="position: relative; z-index: 999">
         <button onclick="randomGenerate()">随机生成</button>
+        <button onclick="showPlanetData ^= 1;document.getElementById('information').innerHTML='已切换，效果将在下次生成时应用。'">切换数据显示模式</button>
+        <pre id="information"></pre>
       </div>
+      <p style="font-weight: 300">Contributor:Nsakrty, Fir-clas-univs</p>
       <script src="generator.js"></script>
     </div>
   </body>
