Add favicon and lazy-load images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Create Planet,Discover Universe" />
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <title>Planet Generator 2</title>
     <style>
       body {
@@ -33,6 +34,7 @@
       }
     </style>
     <link rel="stylesheet" href="planet.css" />
+    <script src="generator.js"></script>
   </head>
   <body>
     <header>
@@ -44,8 +46,8 @@
       <div id="result">
         <div id="planet">
           <div id="shadow"></div>
-          <img class="ring" id="ringFront" src="image/ring0.png" />
-          <img class="ring" id="ringBehind" src="image/ring0.png" />
+          <img class="ring" id="ringFront" src="image/ring0.png" loading="lazy" />
+          <img class="ring" id="ringBehind" src="image/ring0.png" loading="lazy"/>
           <img id="cloud" src="image/cloud1.png" alt="" />
           <img id="detail" src="image/detail0.png" alt="" />
           <div id="base"></div>
@@ -58,7 +60,6 @@
         <pre id="information"></pre>
       </div>
       <p style="font-weight: 300">Contributor:Nsakrty, Fir-clas-univs</p>
-      <script src="generator.js"></script>
     </div>
   </body>
 </html>
