--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div id="workspace">
       <div id="result">
         <div id="planet">
+          <div id="innerLight"></div>
           <canvas id="shadow"></canvas>
           <img class="ring" id="ringFront" src="image/ring0.png" loading="lazy" />
           <img class="ring" id="ringBehind" src="image/ring0.png" loading="lazy" />
