(改进了shadowDrawing.js中的恒星定位并加入了恒星的绘制)

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div id="workspace">
       <div id="result">
         <div id="planet">
+          <div id="star"></div>
           <div id="innerLight"></div>
           <canvas id="shadow"></canvas>
           <img class="ring" id="ringFront" src="image/ring0.png" loading="lazy" />
