--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
       <hr />
       <div id="control" style="position: relative; z-index: 999">
         <button onclick="randomGenerate()">随机生成</button>
-        <button onclick="showPlanetData ^= 1;document.getElementById('information').innerHTML='已切换，效果将在下次生成时应用。'">切换数据显示模式</button>
+        <button onclick="config.showPlanetData ^= 1;document.getElementById('information').innerHTML='已切换，效果将在下次生成时应用。'">切换数据显示模式</button>
+        <button onclick="this.innerHTML = (config.showStar ^= 1)?'隐藏恒星':'显示恒星';document.getElementById('star').style.display = (config.showStar)?'block':'none';document.getElementById('information').innerHTML='切换成功'">隐藏恒星</button>
         <pre id="information"></pre>
       </div>
       <div id="project">
-        <p >Contributor:<a href="https://github.com/Nsakrty">Nsakrty</a>,<a href="https://space.bilibili.com/1595229142">Firstclassuniver</a></p>
+        <p>Contributor:<a href="https://github.com/Nsakrty">Nsakrty</a>,<a href="https://space.bilibili.com/1595229142">Firstclassuniver</a></p>
         <p>Github:<a href="https://github.com/Nsakrty/PlanetGenerator2">Click me</a></p>
       </div>
     </div>
