加入星芒（未染色）

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div id="workspace">
       <div id="result">
         <div id="planet">
+          <img id="asterism" src="image/asterism1.png"></img>
           <div id="star"></div>
           <div id="innerLight"></div>
           <canvas id="shadow"></canvas>
