--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
     <link rel="stylesheet" href="planet.css" />
   </head>
-  <body>
+  <body onload="document.getElementById('information').innerHTML = '加载完成!'">
     <header>
       <h1>Planet Generator 2</h1>
       <h2>Create Planet,Discover Universe</h2>
@@ -67,7 +67,7 @@
         <button onclick="config.showPlanetData ^= 1;document.getElementById('information').innerHTML='已切换，效果将在下次生成时应用。'">切换数据显示模式</button>
         <button onclick="this.innerHTML = (config.showStar ^= 1)?'隐藏恒星':'显示恒星';document.getElementById('star').style.display = (config.showStar)?'block':'none';document.getElementById('asterism').style.display = (config.showStar)?'block':'none';document.getElementById('information').innerHTML='切换成功'">隐藏恒星</button>
         <!-- <button onclick="this.style.display = 'none';document.getElementById('result').style.resize='both';document.getElementById('information').innerHTML='已切换，刷新页面即可关闭并回到默认状态'">自由调节画布大小</button> -->
-        <pre id="information"></pre>
+        <pre id="information">加载中...</pre>
       </div>
       <div id="project">
         <p>Contributor:<a href="https://github.com/Nsakrty">Nsakrty</a>,<a href="https://space.bilibili.com/1595229142">Firstclassuniver</a>,<a href="https://v.douyin.com/irWrBwB9/">Hliva</a></p>
