--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <button onclick="this.innerHTML = (config.showStar ^= 1)?'隐藏恒星':'显示恒星';document.getElementById('star').style.display = (config.showStar)?'block':'none';document.getElementById('asterism').style.display = (config.showStar)?'block':'none';document.getElementById('information').innerHTML='切换成功'">隐藏恒星</button>
         <!-- <button onclick="this.style.display = 'none';document.getElementById('result').style.resize='both';document.getElementById('information').innerHTML='已切换，刷新页面即可关闭并回到默认状态'">自由调节画布大小</button> -->
         <button onclick="share()">保存分享网址</button>
-        <pre id="information">加载中...</pre>
+        <pre id="information" style="word-wrap:break-word;word-break: break-all;white-space: pre-wrap;">加载中...</pre>
       </div>
       <div id="project">
         <p>Contributor:<a href="https://github.com/Nsakrty">Nsakrty</a>,<a href="https://space.bilibili.com/1595229142">Firstclassuniver</a>,<a href="https://v.douyin.com/irWrBwB9/">Hliva</a></p>
