--- a/index.html
+++ b/index.html
@@ -63,12 +63,16 @@
       </div>
       <hr />
       <div id="control" style="position: relative; z-index: 999">
-        <button onclick="randomGenerate()">随机生成</button>
-        <button onclick="config.showPlanetData ^= 1;document.getElementById('information').innerHTML='已切换，效果将在下次生成时应用。'">切换数据显示模式</button>
-        <button onclick="this.innerHTML = (config.showStar ^= 1)?'隐藏恒星':'显示恒星';document.getElementById('star').style.display = (config.showStar)?'block':'none';document.getElementById('asterism').style.display = (config.showStar)?'block':'none';document.getElementById('information').innerHTML='切换成功'">隐藏恒星</button>
-        <!-- <button onclick="this.style.display = 'none';document.getElementById('result').style.resize='both';document.getElementById('information').innerHTML='已切换，刷新页面即可关闭并回到默认状态'">自由调节画布大小</button> -->
-        <button onclick="share()">保存分享网址</button>
-        <pre id="information" style="word-wrap:break-word;word-break: break-all;white-space: pre-wrap;">加载中...</pre>
+        <div style="max-width: 500px">
+          <button onclick="randomGenerate()">随机生成</button>
+          <button onclick="config.showPlanetData ^= 1;document.getElementById('information').innerHTML='已切换，效果将在下次生成时应用。'">切换数据显示模式</button>
+          <button onclick="this.innerHTML = (config.showStar ^= 1)?'隐藏恒星':'显示恒星';document.getElementById('star').style.display = (config.showStar)?'block':'none';document.getElementById('asterism').style.display = (config.showStar)?'block':'none';document.getElementById('information').innerHTML='切换成功'">隐藏恒星</button>
+          <!-- <button onclick="this.style.display = 'none';document.getElementById('result').style.resize='both';document.getElementById('information').innerHTML='已切换，刷新页面即可关闭并回到默认状态'">自由调节画布大小</button> -->
+          <button onclick="share()">保存分享网址</button>
+          <input id="seedEdit" onchange="Math.seed = this.value;this.value = '';randomGenerate()" placeholder="请输入种子（仅限数字）"/>
+          <button onclick="location.search=''">返回默认界面</button>
+        </div>
+        <pre id="information" style="word-wrap: break-word; word-break: break-all; white-space: pre-wrap">加载中...</pre>
       </div>
       <div id="project">
         <p>Contributor:<a href="https://github.com/Nsakrty">Nsakrty</a>,<a href="https://space.bilibili.com/1595229142">Firstclassuniver</a>,<a href="https://v.douyin.com/irWrBwB9/">Hliva</a></p>
@@ -90,10 +94,7 @@
         let copyEvent = navigator.clipboard.writeText(shareUrl);
       }
       function load() {
-        Math.seed = location.search.replace("?", "");
-        Math.seed ? randomGenerate() : void 0;
-        document.getElementById("information").innerHTML = `加载完成!${Math.seed ? `已加载种子:${planetData.seed}` : ""}`;
-        Math.seed = Math.random();
+        document.getElementById("information").innerHTML = "加载完成!";
       }
     </script>
   </body>
