添加了PG2种子计算器链接

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <div id="project">
         <p>Contributor:<a href="https://github.com/Nsakrty">Nsakrty</a>,<a href="https://space.bilibili.com/1595229142">Firstclassuniver</a>,<a href="https://v.douyin.com/irWrBwB9/">Hliva</a></p>
         <p>Github:<a href="https://github.com/Nsakrty/PlanetGenerator2">Click me</a></p>
+        <p>PG2 Seed calculator:<a href="seedCalc.html">Click me</a></p>
       </div>
     </div>
     <script src="generator.js"></script>
