--- a/seedCalc.html
+++ b/seedCalc.html
@@ -27,7 +27,7 @@
       <div id="controls">
         目前只支持输入0~1之间的数字!<br>
         <label for="maxDev">最大误差(0~1):</label>
-        <input type="number" value="0.1" id="maxDev" />
+        <input  value="0.1" id="maxDev" />
         <br />
         <label for="type">类型</label>
         <select id="type">
@@ -44,25 +44,25 @@
         <input type="color" id="color" />
         <br />
         <label for="radiusPercent">半径百分比</label>
-        <input type="number" id="radiusPercent" />
+        <input  id="radiusPercent" />
         <br />
         <label for="rotate">行星旋转角度</label>
-        <input type="number" id="rotate" />
+        <input  id="rotate" />
         <br />
         <label for="detailColor">地表细节色相</label>
-        <input type="number" id="detailColor" />
+        <input  id="detailColor" />
         <br />
         <label for="detailOpacity">地表细节透明度</label>
-        <input type="number" id="detailOpacity" />
+        <input  id="detailOpacity" />
         <br />
         <label for="detailRotate">地表细节旋转角度</label>
-        <input type="number" id="detailRotate" />
+        <input  id="detailRotate" />
         <br />
         <label for="detailSkin">地表细节所用素材</label>
-        <input type="number" id="detailSkin" />
+        <input  id="detailSkin" />
         <br />
         <label for="atmosphereSize">大气层厚度</label>
-        <input type="number" id="atmosphereSize" />
+        <input  id="atmosphereSize" />
         <br />
         <label for="ringOpacity">环的显示</label>
         <select id="ringOpacity">
@@ -72,16 +72,16 @@
         </select>
         <br />
         <label for="ringRotate">环的旋转角度</label>
-        <input type="number" id="ringRotate" />
+        <input  id="ringRotate" />
         <br />
         <label for="ringRotateX">环的倾斜角度</label>
-        <input type="number" id="ringRotateX" />
+        <input  id="ringRotateX" />
         <br />
         <label for="ringColor">环的色相</label>
-        <input type="number" id="ringColor" />
+        <input  id="ringColor" />
         <br />
         <label for="ShadowSize">影子大小</label>
-        <input type="number" id="ShadowSize" />
+        <input  id="ShadowSize" />
         <br />
         <label for="ShadowDirection">影子方向</label>
         <select id="ShadowDirection" >
@@ -92,13 +92,13 @@
         </select>
         <br />
         <label for="starRadiusPercent">恒星半径</label>
-        <input type="number" id="starRadiusPercent" />
+        <input  id="starRadiusPercent" />
         <br />
         <label for="cloudRotate">云层旋转角度</label>
-        <input type="number" id="cloudRotate" />
+        <input  id="cloudRotate" />
         <br />
         <label for="cloudOpacity">云层透明度</label>
-        <input type="number" id="cloudOpacity" />
+        <input  id="cloudOpacity" />
         <br />
         <label for="starSpectrum">恒星光谱</label>
         <select id="starSpectrum">
@@ -119,7 +119,7 @@
         <label for="start">起始值</label>
         <input placeholder="起始值" id="start" value="0" />
         <br />
-        <label for="maxIterations">枚举次数(超过1e6会卡)</label>
+        <label for="maxIterations">枚举次数(超过1e6会卡，不推荐超过1e7)</label>
         <input placeholder="枚举次数" id="maxIterations" value="1e3" />
         <br />
         <label for="stepSize">步长</label>
