--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         border: 1px solid #ddd;
         position: relative;
         overflow: hidden;
-        background-color: #00000099;
+        background-color: #000000;
         background-image: url('image/bg0.png');
         background-size: cover;
         background-position: center;
@@ -88,7 +88,7 @@
         <pre id="information" style="word-wrap: break-word; word-break: break-all; white-space: pre-wrap">加载中...</pre>
       </div>
       <div id="project">
-        <p>Contributor:<a href="https://github.com/Nsakrty">Nsakrty</a>,<a href="https://space.bilibili.com/1595229142">Firstclassuniver</a>,<a href="https://v.douyin.com/irWrBwB9/">Hliva</a></p>
+        <p>Contributor:<a href="https://github.com/Nsakrty">Nsakrty</a>,<a href="https://v.douyin.com/irWrBwB9/">Hliva</a>,<a href="https://space.bilibili.com/1595229142">Firstclassuniver</a></p>
         <p>Github:<a href="https://github.com/Nsakrty/PlanetGenerator2">Click me</a></p>
         <p>PG2 Seed calculator:<a href="seedCalc.html">Click me</a></p>
       </div>
@@ -109,6 +109,7 @@
         document.getElementById("information").innerHTML = "行星种子:" + shareSeed;
       }
       function load() {
+        document.getElementById("result").style.backgroundColor = "#00000099"
         document.getElementById("information").innerHTML = "加载完成!";
       }
     </script>
