云层素材扩充和种子计算器的更新

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <canvas id="shadow"></canvas>
           <img class="ring" id="ringFront" src="image/ring0.png" loading="lazy" />
           <img class="ring" id="ringBehind" src="image/ring0.png" loading="lazy" />
-          <img id="cloud" src="image/cloud1.png" alt="" />
+          <img id="cloud" src="image/cloudGas0.png" alt="" />
           <img id="detail" src="image/detail0.png" alt="" />
           <div id="base"></div>
         </div>
@@ -109,7 +109,7 @@
         document.getElementById("information").innerHTML = "行星种子:" + shareSeed;
       }
       function load() {
-        document.getElementById("result").style.backgroundColor = "#00000099"
+        document.getElementById("result").style.backgroundColor = "rgba(0,0,0,0.5)"
         document.getElementById("information").innerHTML = "加载完成!";
       }
     </script>
