--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <img id="asterism" src="image/asterism0.png" />
           <div id="star"></div>
           <div id="innerLight"></div>
+          <img id="iceSheet" src="image/iceSheet0.png"></img>
           <canvas id="shadow"></canvas>
           <img class="ring" id="ringFront" src="image/ring0.png" loading="lazy" />
           <img class="ring" id="ringBehind" src="image/ring0.png" loading="lazy" />
