--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         overflow: hidden;
         background-color: #000000;
         background-image: url('image/bg0.png');
-        background-size: cover;
+        background-size:var(--resultSize) var(--resultSize);
         background-position: center;
-        background-repeat: no-repeat;
+        background-repeat: repeat;
         background-blend-mode: color;
+        /* resize: both; */
       }
       #status {
         color: #555;
