--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Create Planet,Discover Universe" />
